--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,8 +1,8 @@
 name: GitHub-Profile-Summary-Cards
 
 on:
-  schedule: # execute every 24 hours
-    - cron: "* */24 * * *"
+  schedule:
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -19,4 +19,3 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
           # UTC_OFFSET is optional, default to zero
           UTC_OFFSET: 9
-          
