--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,7 +20,7 @@ jobs:
           base: header, activity, community, repositories, metadata
 
       - name: metrics_languages
-        uses: gh-metrics/metrics@latest
+        uses: gh-metrics/metrics@master
         continue-on-error: true
         with:
           filename: metrics_languages.svg
